Chapter 11 — Listing 11.2: CompletableFutureBasics.java Demonstrates: CompletableFuture async pipeline with supplyAsync and thenApply chaining